http/a/main.css
/* ... */
.score[data-score='1'] { color: #888 }
.score[data-score='2'] { color: #666 }
.score[data-score='3'] { color: #444 }
.score[data-score='4'] { color: #222 }
.score[data-score='5'] { color: #000 }
.score[data-score='6'] { color: #001 }
.score[data-score='7'] { color: #002 }
.score[data-score='8'] { color: #003 }
.score[data-score='9'] { color: #004 }
.score[data-score='10'] { color: #005 }
.score[data-score='11'] { color: #006 }
.score[data-score='12'] { color: #007 }
.score[data-score='13'] { color: #008 }
.score[data-score='14'] { color: #009 }
.score[data-score='15'] { color: #00a }
.score[data-score='16'] { color: #00b }
.score[data-score='17'] { color: #00c }
.score[data-score='18'] { color: #00d }
.score[data-score='19'] { color: #00e }
.score[data-score='20'] { color: #00f }
.score[data-score='21'] { color: #33f }
.score[data-score='22'] { color: #66f }
.score[data-score='23'] { color: #f90 }
.score[data-score='24'] { color: #f80 }
.score[data-score='25'] { color: #f70 }
.score[data-score='26'] { color: #f60 }
.score[data-score='27'] { color: #f50 }
.score[data-score='28'] { color: #f40 }
.score[data-score='29'] { color: #f30 }
.score[data-score='30'] { color: #f20 }
.score[data-score='31'] { color: #f10 }
.starcount {
	font-weight: bold;
	color: #d60;
	line-height: 1.2;
}
.starcount[data-count='0'] { display: none }
html, body { height: 100% }
body > * { flex-shrink: 0 }
#content {
	flex-grow: 1;
	padding-bottom: 1rem;
}
#footer {
	position: absolute;
	width: 100%;
}
#userlist .user { margin-top: 6px }
#mailinput { width: 240px }
#profpic {
	max-width: 144px;
	max-height: 144px;
}
#profpic + div { padding-left: 6px }
.big-rep { font-size: 1.8em }
#logo-big {
	max-width: 100%;
	max-height: 180px;
	display: block;
	margin: 0 auto;
	font-size: 5vmin;
}
@media (min-width: 840px) {
	#logo-big { max-width: 80% }
}
@media (min-width: 1500px) {
	#logo-big {
		width: 50%;
		max-width: 900px;
		max-height: 200px;
	}
}
@media (max-width: 600px) {
	body { font-size: 0.95em }
}
@media (max-width: 400px) {
	body { font-size: 0.9em }
}
@media (min-width: 360px) {
	line {
		display: inline-block;
		width: 1px; height: 1.2em;
		background: #888;
		vertical-align: sub;
	}
}
@media (min-width: 480px) {
	.resp-flex { display: flex }
	.resp-flex > * { flex-grow: 1 }
}
@media (min-width: 550px) {
	section {
		padding: 4px;
		background: rgba(255, 255, 255, 0.4);
	}
	.resp-flex > section:not(:first-child) { margin-left: 6px }
}
@media (min-width: 701px) {
	.half {
		float: left;
		width: 49.5%;
	}
	.half.rit, .half:not(.rit) + .half:last-child { float: right }
}
#nav {
	background: #000;
	font-size: 0;
}
#nav a {
	color: #ddd;
	font-size: 0.9rem;
	line-height: 1.9;
	padding: 0 3px;
}
#nav a:note(#logo) { white-space: pre }
#nav span { padding: 0 4px }
#nav nav {
	margin: 0 4px;
	display: inline-block;
}
#nav #logo { display: inline-block }
#logo > svg {
	max-width: 100%;
	height: 100%;
	fill: #fff;
	margin: 0;
	vertical-align: top;
}
#nav form {
	min-width: 8em;
	width: 100%;
	font-size: 0.9rem;
	padding: 0 4px;
	margin: 2px 0;
}
#nav form input {
	width: 100%;
	color: #000;
	font-size: 16px;
	line-height: 1em;
	padding: 0 8px;
}
#notifs:empty { display: none }
#nav a.active > span { font-weight: bold }
@media (max-width: 375px) {
	#nav #logo {
		height: 2rem;
		margin-bottom: 4px;
		padding: 3px 8px;
	}
	#nav #logo, #nav svg { width: 100% }
	#nav div:not(:first-of-type) {
		min-width: 40%;
		display: inline-block;
	}
	#nav.sub div { display: inline }
	#nav .active nav + spacer::after {
		content: '\a';
		white-space: pre;
	}
}
@media (min-width: 376px) and (max-width: 839px) {
	#nav {
		text-align: right;
		margin-top: 2px;
	}
	#nav #logo {
		float: left;
		height: calc(4px + 1.9em);
		margin: -2px 0 0 4px;
		padding: 0 10px;
	}
	#logo > svg { width: 145px }
	#nav > div:last-of-type { margin-left: 6px }
	#nav form { margin: 3px 0 }
	#nav form input { max-width: 18em }
}
@media (min-width: 376px) and (max-width: 499px) {
	#nav.sub div { display: inline }
	#nav .active nav + spacer::after {
		content: '\a';
		white-space: pre;
	}
	#nav form { width: 100% }
}
@media (min-width: 500px) {
	#nav a { display: inline-block }
	#nav:not(.sub) {
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
	}
	#nav form {
		flex-basis: 10em;
		flex-grow: 1;
	}
}
@media (min-width: 500px) and (max-width: 839px) {
	#nav div:nth-of-type(2) { flex-grow: 1 }
}
@media (min-width: 645px) {
	#nav {
		display: flex;
		flex-wrap: wrap;
		justify-content: center;
	}
}
@media (max-width: 839px) {
	#nav { margin-bottom: 2px }
	#nav a:hover > span, #nav #logo:hover { background: #33a }
	#nav a.active > span, #nav a:active > span, #logo.active, #nav #logo:active { background: #119 }
	#nav a.active > span, #nav a:active > span, #nav #logo:active, #nav a:hover > span, #nav #logo:hover {
		display: inline-block;
		line-height: 1.5;
	}
	#nav :not(.active) > nav { display: none }
	#nav nav { background: #333 }
	#github-button svg { display: none }
}
@media (pointer: coarse) and (max-width: 839px) {
	#nav a { font-size: 1rem }
}
/* ... */

